--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^10.12.27",
+    "@types/node": "^8.10.40",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.3.3333"
   }
